--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
@@ -15,6 +15,14 @@
 	}
 }
 
+li.moreless-discussion {
+	text-align: center;
+	margin-top: 20px;
+	padding: 5p;
+	border-radius: 4px;
+	font-weight: bold;
+}
+
 #review_info_rating {
 	margin-bottom: 25px;
 }
@@ -22,6 +30,10 @@
 .discussion-all {
 	.rating-xs {
 		font-size: 1.5em;
+	}
+	
+	.rating-reset {
+		margin-top: 7px;
 	}
 }
 
