--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
@@ -35,6 +35,10 @@ li.moreless-discussion {
 	.rating-reset {
 		margin-top: 7px;
 	}
+	
+	.simple-comment-form, simple-review-form {
+		margin-top: 10px;
+	}
 }
 
 @discussion-image-size: 44px;
