moved forms to top

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
@@ -1,4 +1,4 @@
-.simple-comment-form {
+.simple-comment-form, .simple-review-form {
 	hr {
 		margin-top: 2px;
 		margin-bottom: 2px;
@@ -32,8 +32,10 @@ li.moreless-discussion {
 		font-size: 1.5em;
 	}
 	
-	.rating-reset {
-		margin-top: 7px;
+	.simple-review-form {
+		.star-rating {
+			margin-top: -5px;
+		}
 	}
 	
 	.simple-comment-form, simple-review-form {
