--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -25,6 +25,9 @@
 /** TODO: remove jquery ui? */
 @import (inline) "../jquery/plugins/ui/jquery-ui.css";
 
+/** rating bootstrap lib */
+@import (inline) "../star-rating/star-rating.css";
+
 /** Batchedit page info Box on mouseover*/
 @import "BatchEdit.less";
 
