--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/history.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/history.jspx
@@ -115,7 +115,7 @@
 											<div class="title">
 												<div class="media">
 													<div class="media-body" id="titletext">
-														<div class="pull-right"><buttons:communityPostActions post="${newestPost}" resourceType="bibtex"/></div>
+														<div class="pull-right"><buttons:communityPostActions post="${newestPost}" resourceType="bibtex" communityPostExists="${true}" /></div>
 														<h1 class="media-heading" id="pubtitle" itemprop="name"><c:out value="${mtl:cleanBibtex(newestPost.resource.title)}" />
 															<c:if test="${newestPost.approved}">
 																<a title="${fn:escapeXml(approved)}">
@@ -150,7 +150,7 @@
 											<div class="title">
 											<div class="media">
 												<div class="media-body" id="titletext">
-													<div class="pull-right"><buttons:communityPostActions post="${newestPost}" resourceType="bookmark"/></div>
+													<div class="pull-right"><buttons:communityPostActions post="${newestPost}" resourceType="bookmark" communityPostExists="${true}" /></div>
 													<h1 class="media-heading" id="pubtitle" itemprop="name"><c:out value="${mtl:cleanBibtex(newestPost.resource.title)}" /></h1>
 													<c:set var="url" value="${newestPost.resource.url}" />
 													<p><a href="${url}" itemprop="url"><c:out value="${url}" /></a></p>
