commented. Starting to use different method of getting the CSL styles :(

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/export/csl-layout.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/export/csl-layout.jspx
@@ -36,7 +36,7 @@
 		</head>
 		<body>
 			<div id="csl-container-${command.layout}" data-url="/csl/${fn:escapeXml(requPath)}" data-style="${command.layout}">
-				<!-- rendered by javascript -->
+				<!-- rendered by javascript / each div has unique ID-->
 			</div>
 		</body>
 	</html>
