impemented #2635 (messages missing)

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1404,3 +1404,8 @@ ul#urlList {
 	margin-right: 0;
 	.border-left-radius(0);
 }
+
+.btn-group-wrap-text {
+	white-space: normal !important;
+	font-size: 12px !important;
+}
