--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -622,8 +622,13 @@ div#sidebar {
 	}
 }
 
-.more-list span.desc {
-	padding-left: 3px;
+.more-list {
+	.more-link-item-inline {
+		display:block;
+	}
+	span.desc {
+		padding-left: 3px;
+	}
 }
 
 .sidebar-setting-box {
