nicer warning container

--- a/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
@@ -69,7 +69,9 @@
 
 .community-info {
 	margin-left: 15px;
-	padding: 2px;
+	padding: 7px;
+	margin-top: 1px;
+	border-radius: 5px;
 	
 	&.warning {
 		background-color: @alert-warning-bg;
