replaced bibtex search with search bar

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/bibtex.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/bibtex.jspx
@@ -54,7 +54,7 @@
 		</jsp:attribute>
 		
 		<jsp:attribute name="heading">
-			<parts:search pathMessageKey="navi.publication" formAction="/search" formInputName="search" formInputValue="${title}"/>
+			<parts:search pathMessageKey="navi.search" formAction="/search" formInputName="search"/>
 		</jsp:attribute>
 		
 		<jsp:attribute name="content">
