links for tag cloud

--- a/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
@@ -19,11 +19,13 @@
 			background-color: @main-color;
 			font-weight: 700;
 			line-height: 1;
-			color: white;
 			text-align: center;
 			white-space: nowrap;
 			vertical-align: baseline;
 			border-radius: .25em;
+			a {
+				color: white;
+			}
 		}
 		
 		.tagtiny {
