--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/authortag.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/authortag.jspx
@@ -21,8 +21,7 @@
 		pageTitle="${authorPageTitle} :: ${requestedAuthor} :: ${command.requestedTags}"
 		command="${command}"
 		requPath="${requPath}"
-		disableResourcetypeSelection="${true}"
-		headline="">
+		disableResourcetypeSelection="${true}">
 		
 		<jsp:attribute name="breadcrumbs">
 			<nav:breadcrumbs>
