--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/inbox.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/inbox.jspx
@@ -17,8 +17,7 @@
 			command="${command}" 
 			requPath="${requPath}"  
 			showPageOptions="${true}"
-			showInboxActions="${true}"
-			headline="${headline}">
+			showInboxActions="${true}">
 
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.search" formAction="/search" formInputName="search"/>
