--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/recommended.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/recommended.jspx
@@ -12,15 +12,14 @@
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 
 	<fmt:message key="recommended.pagetitle" var="pageTitle"/>
-	<fmt:message var="headline" key="page.recommended.headline" />
+	
 	<layout:resourceLayout pageTitle="${pageTitle}" 
 			command="${command}" 
 			requPath="${requPath}" 
 			disableListNavigation="${true}" 
 			activeTab="my"
 			showPageOptions="${true}"
-			hideFooterContainer="${true}"
-			headline="${headline}">
+			hideFooterContainer="${true}">
 			
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.search" formAction="/search" formInputName="search"/>
