--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/userpersonalized.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/userpersonalized.jspx
@@ -14,9 +14,8 @@
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"> 
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
-	<fmt:message var="headline" key="page.userpersonalized.headline" />
 	
-	<layout:resourceLayout pageTitle="${command.pageTitle}" command="${command}" requPath="personalized/${requPath}" activeTab="${(command.requestedUser eq command.context.loginUser.name) ? 'my' : ''}" headline="${headline}">
+	<layout:resourceLayout pageTitle="${command.pageTitle}" command="${command}" requPath="personalized/${requPath}" activeTab="${(command.requestedUser eq command.context.loginUser.name) ? 'my' : ''}">
 	
 		<!-- include javascript -->
 		<jsp:attribute name="headerExt">
