--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/viewabletag.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/viewabletag.jspx
@@ -13,12 +13,8 @@
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/nav"> 
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
-	<fmt:message var="headline" key="page.viewabletag.headline">
-		<fmt:param>${command.requestedGroup}</fmt:param>
-		<fmt:param>${command.requestedTags}</fmt:param>
-	</fmt:message>
 	
-	<layout:resourceLayout pageTitle="${command.pageTitle}" command="${command}" requPath="${requPath}" headline="${headline}">
+	<layout:resourceLayout pageTitle="${command.pageTitle}" command="${command}" requPath="${requPath}">
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.viewable" formAction="${relativeUrlGenerator.getViewableUrlByGroupName(command.requestedGroup)}" formInputName="tag" formInputValue="${command.requestedTags}">
 				<jsp:attribute name="pathPart">
