--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/bibtexkey.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/bibtexkey.jspx
@@ -13,13 +13,12 @@
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/nav">
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
-	<fmt:message var="headline" key="page.bibtexkey.headline" />
+	
 	<layout:resourceLayout 
 		pageTitle="${command.pageTitle}" 
 		command="${command}" 
 		requPath="${requPath}" 
-		disableResourcetypeSelection="${true}"
-		headline="${headline}${command.requestedKey}">
+		disableResourcetypeSelection="${true}">
 		
 		<jsp:attribute name="breadcrumbs">
 			<nav:breadcrumbs>
@@ -29,14 +28,14 @@
 				</jsp:attribute>
 			</nav:breadcrumbs>
 		</jsp:attribute>
-		<jsp:attribute name="heading">		
+		<jsp:attribute name="heading">
 			<c:choose>
 				<c:when test="${not empty command.scope and command.scope.name() ne 'LOCAL'}">
 					<c:set var="pathMessageKey" value="navi.federatedBibtexKey"/>
 					<c:set var="bibtexKeyUrl" value="${relativeUrlGenerator.getPublicationUrlByBibTexKey(command.requestedKey)}?scope=${command.scope.name()}"/>
 				</c:when>
 				<c:otherwise>
-					<c:set var="pathMessageKey" value="navi.bibtexkey"/>							
+					<c:set var="pathMessageKey" value="navi.bibtexkey"/>
 					<c:set var="bibtexKeyUrl" value="${relativeUrlGenerator.getPublicationUrlByBibTexKey(command.requestedKey)}"/>
 				</c:otherwise>
 			</c:choose>
@@ -50,7 +49,7 @@
 			<sidebar:sidebarTagCloudItem requPath="tag" cmd="${command.tagcloud}" tagSizeMode="home" scope="${command.scope.name()}"/>
 			
 			<!-- enable autocompletion for bibtexkeys -->
-			<c:if test="${not empty command.requestedUser}"> 
+			<c:if test="${not empty command.requestedUser}">
 				<script type="text/javascript">
 				<![CDATA[
 				         $(function(){
@@ -58,7 +57,7 @@
 				     			width: 260,
 				     			selectFirst: true
 				     		});
-				       });					
+				       });
 					
 				]]>
 				</script>
@@ -69,7 +68,7 @@
 		<jsp:attribute name="headerExt">
 			<c:if test="${not empty command.requestedUser}">
 				<script type="text/javascript" src="${resdir}/jquery/plugins/autocomplete/jquery.autocomplete.js"><!-- keep me --></script>
-	    		<script type="text/javascript" src="${resdir}/jquery/plugins/form/jquery.form.js"><!-- keep me --></script> 
+				<script type="text/javascript" src="${resdir}/jquery/plugins/form/jquery.form.js"><!-- keep me --></script> 
 			</c:if>
 		</jsp:attribute>
 	</layout:resourceLayout>
