--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/clipboard.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/clipboard.jspx
@@ -19,8 +19,7 @@
 	<layout:resourceLayout pageTitle="${pageTitle}" command="${command}" 
 			requPath="${requPath}" isClipboard="${true}" 
 			disableListNavigation="${true}"
-			disableResourcetypeSelection="${true}"
-			headline="${headline}">
+			disableResourcetypeSelection="${true}">
 
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.clipboard"/>
