--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/friend.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/friend.jspx
@@ -15,8 +15,8 @@
 	
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
-	<fmt:message var="headline" key="page.friend.headline" />
-	<layout:resourceLayout pageTitle="${command.pageTitle}" command="${command}" requPath="${requPath}"	activeTab="${command.context.loginUser.name != null ? 'my' : ''}" headline="${headline}${command.requestedUser}">
+	
+	<layout:resourceLayout pageTitle="${command.pageTitle}" command="${command}" requPath="${requPath}"	activeTab="${command.context.loginUser.name != null ? 'my' : ''}">
 		
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.friend" formAction="${relativeUrlGenerator.getFriendUrlByUserName(command.requestedUser)}" formInputName="tag" formInputValue="${command.requestedTags}">
