--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/groupDocument.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/groupDocument.jspx
@@ -15,13 +15,12 @@
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/nav">
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
-	<fmt:message var="headline" key="page.groupDocument.headline" />
+	
 	<layout:resourceLayout 
 		pageTitle="${command.pageTitle}" 
 		command="${command}" 
 		requPath="${requPath}" 
-		disableResourcetypeSelection="${true}"
-		headline="${headline}">
+		disableResourcetypeSelection="${true}">
 		
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.documents" formAction="${relativeUrlGenerator.getGroupUrlByGroupName(command.requestedGroup)}" formInputName="tag" formInputValue="${command.requestedTags}">
