--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/grouptag.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/grouptag.jspx
@@ -14,13 +14,10 @@
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/nav"
 	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/layout/sidebar"
 	xmlns:button="urn:jsptagdir:/WEB-INF/tags/buttons">
-	 
+	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
-	<fmt:message var="headline" key="page.grouptag.headline">
-		<fmt:param>${command.requestedGroup}</fmt:param>
-		<fmt:param>${command.requestedTags}</fmt:param>
-	</fmt:message>
-	<layout:resourceLayout pageTitle="${command.pageTitle}" command="${command}" requPath="${requPath}" activeTab="groups" headline="${headline}">
+	
+	<layout:resourceLayout pageTitle="${command.pageTitle}" command="${command}" requPath="${requPath}" activeTab="groups">
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.group" formAction="${relativeUrlGenerator.getGroupUrlByGroupName(command.requestedGroup)}" formInputName="tag" formInputValue="${command.requestedTags}">
 				<jsp:attribute name="pathPart">
@@ -57,7 +54,7 @@
 								</c:when>
 								<c:otherwise>
 									<c:out value=" "/>
-								   	<a class="btn btn-default btn-primary" href="/joinGroup?group=${fn:escapeXml(groupName)}">
+									<a class="btn btn-default btn-primary" href="/joinGroup?group=${fn:escapeXml(groupName)}">
 										<fmt:message key="joinGroup"/>
 									</a>
 								</c:otherwise>
@@ -70,9 +67,8 @@
 			<parts:tagsAndConceptsForSidebar/>
 
 			<sidebar:relatedTagsItem requPath="${requPath}" cmd="${command.relatedTagCommand}"/>
-					
+			
 			<sidebar:sidebarTagCloudItem requPath="${mtl:getLowerPath(requPath)}" cmd="${command.tagcloud}" showTooltips="${command.context.loginUser.settings.tagboxTooltip}" tagboxMinfreqStyle="default"/>
-
 		</jsp:attribute>
 	</layout:resourceLayout>
 </jsp:root>
