--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/relevantfor.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/relevantfor.jspx
@@ -14,20 +14,7 @@
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/nav"> 
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
-	<c:choose>
-		<c:when test="${not empty command.requestedTags}">
-			<fmt:message var="headline" key="page.relevantforTags.headline">
-				<fmt:param>${command.requestedGroup}</fmt:param>
-				<fmt:param>${command.requestedTags}</fmt:param>
-			</fmt:message>
-		</c:when>
-		<c:otherwise>
-			<fmt:message var="headline" key="page.relevantfor.headline">
-				<fmt:param>${command.requestedGroup}</fmt:param>
-			</fmt:message>
-		</c:otherwise>
-	</c:choose>
-	<layout:resourceLayout pageTitle="${command.pageTitle}" command="${command}" requPath="${requPath}" headline="${headline}">
+	<layout:resourceLayout pageTitle="${command.pageTitle}" command="${command}" requPath="${requPath}">
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.relevantFor" formAction="${relativeUrlGenerator.getRelevantForUrlByGroupName(command.requestedGroup)}" formInputName="tag" formInputValue="${command.requestedTags}">
 				<jsp:attribute name="pathPart">
