--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/usertag.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/usertag.jspx
@@ -14,11 +14,8 @@
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/nav"> 
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
-	<fmt:message var="headline" key="page.usertag.headline">
-		<fmt:param>${command.requestedUser}</fmt:param>
-		<fmt:param>${command.requestedTags}</fmt:param>
-	</fmt:message>
-	<layout:resourceLayout pageTitle="${command.pageTitle}" command="${command}" requPath="${requPath}" headline="${headline}">
+	
+	<layout:resourceLayout pageTitle="${command.pageTitle}" command="${command}" requPath="${requPath}">
 	
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.user" formAction="${relativeUrlGenerator.getUserUrlByUserName(fn:escapeXml(command.requestedUser))}" formInputName="tag" formInputValue="${command.requestedTags}"	>
