--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/viewable.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/viewable.jspx
@@ -14,9 +14,8 @@
 	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/layout/sidebar">
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
-	<!-- TODO: this key is missing -->
-	<fmt:message var="headline" key="page.viewable.headline" />
-	<layout:resourceLayout  pageTitle="${command.pageTitle}" command="${command}" requPath="${requPath}" headline="${headline}${command.requestedGroup}">
+
+	<layout:resourceLayout  pageTitle="${command.pageTitle}" command="${command}" requPath="${requPath}">
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.viewable" formAction="${relativeUrlGenerator.getViewableUrlByGroupName(command.requestedGroup)}" formInputName="tag">
 				<jsp:attribute name="pathPart">
