removed unused footercontainer attribute

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/home.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/home.jspx
@@ -21,8 +21,7 @@
 			requPath="${requPath}" 
 			disableListNavigation="${true}"
 			activeTab="home"
-			showPageOptions="${true}"
-			hideFooterContainer="${true}">
+			showPageOptions="${true}">
 		
 		<jsp:attribute name="headerExt">
 			<script type="text/javascript">
