updated star rating plugin
updated yuicompressor

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1438,6 +1438,12 @@ ul#urlList {
 }
 
 /** fixes for rating plugin */
-#review_info_rating .rating-disabled {
-	cursor: default;
+.rating-container {
+	.filled-stars {
+		text-shadow: none;
+	}
+	
+	.rating-disabled {
+		cursor: default;
+	}
 }
