fixed discussion pages

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
@@ -138,3 +138,11 @@ img.simple-user-pic {
 form .media {
 	margin-bottom: 5px;
 }
+
+/*
+ * discussion pages
+ */
+ 
+#sidebox .rating-overview {
+	text-align: center;
+}
