replaced image star ranking with font awesome stars

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1448,3 +1448,23 @@ ul#urlList {
 		cursor: default;
 	}
 }
+
+.score {
+	display: inline-block;
+	color: #ccc;
+	font-size: 15px;
+	position: relative;
+}
+
+.score::before, .score span::before{
+	content: "\2605\2605\2605\2605\2605";
+	display: block;
+}
+
+.score span {
+	color: gold;
+	position: absolute;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+}
