removed :: from title tag

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/join_group.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/join_group.jspx
@@ -22,13 +22,7 @@
 		 	| heading
 		 	+-->
 		<jsp:attribute name="heading">
-			<parts:search pathMessageKey="joinGroup">
-				<jsp:attribute name="pathPart">
-					<li>
-						:: <a href="${relativeUrlGenerator.getGroupUrlByGroupName(command.group)}" itemprop="name"><c:out value='${command.group}'/></a>
-					</li>
-				</jsp:attribute>
-			</parts:search>
+			<parts:search pathMessageKey="navi.search" formAction="/search" formInputName="search"/>
 		</jsp:attribute>
 
 		<!--+
