--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/group.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/group.jspx
@@ -20,7 +20,7 @@
 	<fmt:message key="navi.admin" var="adminPageTitle" />
 
 	<layout:layout 
-		pageTitle="${adminPageTitle} :: Group" 
+		pageTitle="${adminPageTitle} | Group" 
 		loginUser="${command.context.loginUser}" 
 		requPath="${requPath}">
 
@@ -32,16 +32,9 @@
 				</jsp:attribute>
 			</nav:breadcrumbs>
 		</jsp:attribute>
-
-		<!-- TODO: is this present anywhere? Do we still need that? -->
+		
 		<jsp:attribute name="heading">
-			<parts:search pathMessageKey="navi.admin">
-				<jsp:attribute name="pathPart">
-					<li>
-						:: <a rel="path_menu" href="${relativeUrlGenerator.getAdminUrlByName('group')}">Group</a>
-					</li>
-				</jsp:attribute>
-			</parts:search>
+			<parts:search pathMessageKey="navi.search" formAction="/search" formInputName="search"/>
 		</jsp:attribute>
 
 		<jsp:attribute name="headerExt">
