--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/oauth.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/oauth.jspx
@@ -19,7 +19,7 @@
 	<fmt:message key="navi.admin" var="adminPageTitle" />
 	
 	<layout:paneLayout
-			pageTitle="${adminPageTitle} :: OAuth"
+			pageTitle="${adminPageTitle} | OAuth"
 			requPath="${requPath}"
 			headerMessageKey="gettingStarted.headline"
 			command="${command}"
@@ -34,14 +34,7 @@
 		</jsp:attribute>
 
 		<jsp:attribute name="heading">
-			<parts:search pathMessageKey="navi.admin">
-				<jsp:attribute name="pathPart">
-					<li>
-						:: <a rel="path_menu" href="${relativeUrlGenerator.getAdminUrlByName('oauth')}">OAuth</a>
-					</li>
-				</jsp:attribute>
-			</parts:search>
-
+			<parts:search pathMessageKey="navi.search" formAction="/search" formInputName="search"/>
 		</jsp:attribute>
 		
 		<jsp:attribute name="headerExt">
