--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/recommender.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/recommender.jspx
@@ -28,28 +28,17 @@
 		</jsp:attribute>
 
 		<jsp:attribute name="heading">
-			<parts:search pathMessageKey="navi.admin">
-				<jsp:attribute name="pathPart">
-					<li>
-						:: <a rel="path_menu" href="${relativeUrlGenerator.getAdminUrlByName('recommender')}">Recommender</a>
-					</li>
-				</jsp:attribute>
-			</parts:search>
+			<parts:search pathMessageKey="navi.admin" />
 		</jsp:attribute>
 		
 		<jsp:attribute name="headerExt">
-			<link rel="stylesheet" type="text/css"
-				href="${resdir}/css/admin.css" />
-			<link rel="stylesheet" type="text/css"
-				href="${resdir}/css/adminrecommender.css" />
+			<link rel="stylesheet" type="text/css" href="${resdir}/css/admin.css" />
+			<link rel="stylesheet" type="text/css" href="${resdir}/css/adminrecommender.css" />
 			<script src="${resdir}/javascript/admin/recommender.js" type="text/javascript"><!-- keep me --></script>
 		</jsp:attribute>
 		
-			
 		<jsp:attribute name="content">
-
 			<fmt:message key="submit" var="submitBtn" />
-
 			<!-- Navi for tabselection -->
 			<p class="adminNavi">
 			  <c:forEach var="tab" items="${command.tabs}">
@@ -236,11 +225,10 @@
 							<input class="adminBtn" type="submit" id="recActivationBtn" value="${submitBtn}"/>
 							</div>
 						</c:if>
-					    <br />
-				   </div> 
-			   </div> 
+						<br />
+					</div> 
+				</div>
 			</div>
-            
-		</jsp:attribute>				
+		</jsp:attribute>
 	</layout:layout>
 </jsp:root>
