--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/spam.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/spam.jspx
@@ -51,13 +51,7 @@
 		</jsp:attribute>
 
 		<jsp:attribute name="heading">
-			<parts:search pathMessageKey="navi.admin">
-				<jsp:attribute name="pathPart">
-					<li>
-						::<a rel="path_menu" href="${relativeUrlGenerator.getAdminUrlByName('spam')}">Spam</a>
-					</li>
-				</jsp:attribute>
-			</parts:search>
+			<parts:search pathMessageKey="navi.search" formAction="/search" formInputName="search"/>
 		</jsp:attribute>
 
 		<jsp:attribute name="content">
