--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/sync.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/sync.jspx
@@ -20,7 +20,7 @@
 	<fmt:message key="navi.admin" var="adminPageTitle" />
 	
 	<layout:layout 
-		pageTitle="${adminPageTitle} :: Synchronization" 
+		pageTitle="${adminPageTitle} | Synchronization" 
 		loginUser="${command.context.loginUser}" 
 		requPath="${requPath}">
 		
@@ -34,13 +34,7 @@
 		</jsp:attribute>
 
 		<jsp:attribute name="heading">
-			<parts:search pathMessageKey="navi.admin">
-				<jsp:attribute name="pathPart">
-					<li>
-						:: <a rel="path_menu" href="${relativeUrlGenerator.getAdminUrlByName('sync')}">Synchronization</a>
-					</li>
-				</jsp:attribute>
-			</parts:search>
+			<parts:search pathMessageKey="navi.search" formAction="/search" formInputName="search"/>
 		</jsp:attribute>
 		
 		<jsp:attribute name="content">
