--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/authortag.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/authortag.jspx
@@ -16,9 +16,7 @@
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 
 	<c:set var="requestedAuthor" value="${command.requestedAuthor}" />
-	<fmt:message key="navi.author" var="authorPageTitle" />
-	<layout:resourceLayout
-		pageTitle="${authorPageTitle} :: ${requestedAuthor} :: ${command.requestedTags}"
+	<layout:resourceLayout pageTitle="${requestedAuthor} > ${command.requestedTags}"
 		command="${command}"
 		requPath="${requPath}"
 		disableResourcetypeSelection="${true}">
