--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/spheres/sphere.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/spheres/sphere.jspx
@@ -27,15 +27,9 @@
 		</jsp:attribute>
 	
 		<jsp:attribute name="heading">
-			<parts:search pathMessageKey="navi.sphere" formAction="/sphere/${mtl:encodePathSegment(command.sphereName)}" formInputName="tag" formInputValue="${command.requestedTags}">
-				<jsp:attribute name="pathPart">
-					<li>
-						:: <a href="/sphere/${mtl:encodePathSegment(command.sphereName)}"><c:out value='${command.sphereName}'/></a>
-					</li>
-				</jsp:attribute>
-			</parts:search>
+			<parts:search pathMessageKey="navi.search" formAction="/search" formInputName="search"/>
 		</jsp:attribute>
-				
+		
 		<jsp:attribute name="infobox">
 			<parts:infobox>
 				<jsp:attribute name="infoTextBody">
